--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -5,4 +5,6 @@
   padding: 10px;
   border-radius: 5px;
   align-items: center;
+  text-align: center;
+  font-family: 'Courier New', Courier, monospace;
 }
