--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,8 +1,3 @@
-#main-outer
-{
-  background-color: grey;
-  color: white;
-  padding: 10px;
-  border-radius: 5px;
-  align-items: center;
+:root {
+  background-color:whitesmoke;
 }
